# MULSUM

./: .gitignore  LICENSE  extract_mm_projector.py  pyproject.toml  readme.md  requirements.txt
configs/: image_text_config.json  prompts_config.json
src/: __init__.py  config_utils.py  constants.py  conversation.py  data_loader.py  image_selection.py  image_text_inference.py  image_text_inference_ablation.py  mm_utils.py  prompt_manager.py  utils.py
src/model/: __init__.py  builder.py  mulsum_arch.py  mulsum_llama.py
src/train/: dataset.py  mulsum_trainer.py  train.py  train_image_text.py  train_mem.py
